[package]
name = "guardian-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Client library for Guardian rate limiter gRPC service"
keywords = ["rate-limiting", "grpc", "client"]
categories = ["network-programming", "api-bindings"]

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[lib]
name = "guardian_client"
path = "src/lib.rs"